[project]
name = "mcp-calculator-kel"
version = "1.1.0"
description = "a mcp calculator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "build>=1.2.2.post1",
    "html2text>=2024.2.26",
    "mcp[cli]>=1.2.0",
    "requests>=2.32.3",
    "twine>=6.1.0",
]

[project.scripts]
mcp-calculator-kel = "mcp_calculator_kel:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
